[project]
name = "ndlsp"
dynamic = ["version"]
description = "N-dimension Lomb-Scargle Periodogram"
authors = [
    {name = "Joseph Hughes", email = "jhughes@nwra.com"}
]
maintainers = [
    {name = "Joseph Hughes", email = "jhughes@nwra.com"},
    {name = "Matt Hogan", email = "mhogan@nwra.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy",
    "matplotlib",
    "typing-extensions"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ndlsp._version.__version__"}

[dependency-groups]
dev = [
    "jupyter",
    "ipympl",
    "pandas-stubs ; python_full_version >= '3.10'",
    "scipy-stubs ; python_full_version >= '3.10'"
]
