[project]
name = "ndlsp"
dynamic = ["version"]
description = "N-dimension Lomb-Scargle Periodogram"
authors = [
    {name = "Joseph Hughes", email = "jhughes@nwra.com"}
]
maintainers = [
    {name = "Joseph Hughes", email = "jhughes@nwra.com"},
    {name = "Matt Hogan", email = "mhogan@nwra.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy",
    "matplotlib",
    "typing-extensions"
]

classifiers = [
  "Topic :: Scientific/Engineering :: Physics",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/mhogan-nwra/ND-LSP"
Repository = "https://github.com/mhogan-nwra/ND-LSP"
Issues = "https://github.com/mhogan-nwra/ND-LSP/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ndlsp._version.__version__"}

[dependency-groups]
dev = [
    "jupyter",
    "ipympl",
    "pandas-stubs ; python_full_version >= '3.10'",
    "scipy-stubs ; python_full_version >= '3.10'"
]
